<resources>
    <string name="app_name">OrderManagementApp</string>
    <string name="signup">Signup</string>
    <string name="new_user">New User?</string>
    <string name="login">LOGIN</string>
    <string name="remember_me">Remember me</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome back,</string>

    <string name="err_msg_name">Enter name</string>
    <string name="err_msg_email">Enter email</string>
    <string name="err_msg_password">Enter password</string>
    <string name="enter_name">Enter Name</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_small">Login</string>
    <string name="welcome_to_order_management">Welcome to order management</string>

    <string name="failed">Authentication failed! Register</string>
</resources>
